--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,18 @@
-include ':app'
-
-def capacitorSettings = new File(rootDir, 'capacitor.settings.gradle')
-if (capacitorSettings.exists()) {
-    apply from: capacitorSettings
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    plugins {
+        id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
+    }
 }
+
+rootProject.name = 'android'
+
+include ':app'
+include ':capacitor-cordova-android-plugins'
+project(':capacitor-cordova-android-plugins').projectDir = new File('./capacitor-cordova-android-plugins')
+
+apply from: 'capacitor.settings.gradle'
