--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,9 +43,9 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
     
-    implementation project(':capacitor-community-contacts')
-    implementation project(':ebarooni-capacitor-calendar')
     implementation project(':team-lepisode-capacitor-google-login')
+    implementation project(':capacitor-filesystem')
+    implementation project(':capacitor-share')
 }
 
 try {
