--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -10,6 +10,8 @@ android {
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':capacitor-community-contacts')
+    implementation project(':capacitor-filesystem')
+    implementation project(':capacitor-share')
     implementation project(':ebarooni-capacitor-calendar')
     implementation project(':team-lepisode-capacitor-google-login')
 
